--- a/templates/index.html
+++ b/templates/index.html
@@ -82,6 +82,7 @@
     </style>
 </head>
 <body>
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 <div class="container">
     <h1>Air Quality Prediction</h1>
     {% if error %}
